# py-awesome-template

./: .coveragerc  .editorconfig  .env.example  .flake8  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yaml
app/domain/contracts/: __init__.py  database_contract.py  example_database_contract.py  jwt_contract.py  usecase.py
app/domain/entities/models/: base_model.py  example_model.py  user.py
app/domain/services/helpers/constants/: auth.py
app/domain/services/helpers/envs/: envs.py
app/domain/services/helpers/errors/: __init__.py  generic_errors.py  user_errors.py
app/domain/services/helpers/hash/: __init__.py  hash.py
app/domain/services/helpers/validations/: __init__.py  validations.py
app/domain/usecases/example/: example_usecase.py  example_usecase_test.py
app/domain/usecases/hello_world/: hello_world.py  hello_world_test.py
app/domain/usecases/signin/: __init__.py  signin.py  signin_test.py
app/domain/usecases/users/create/: __init__.py  create_user.py  create_user_test.py
app/infra/database/: example_database.py
app/infra/database/mongodb/: __init__.py  mongodb.py
app/infra/jwt/: __init__.py  jwt.py
app/main/: main.py
app/presentation/factories/: example_factory.py  usecases_factories.py
app/presentation/fastapi/configs/: configs.py
app/presentation/fastapi/middlewares/: auth_middleware.py  example_middleware.py
app/presentation/fastapi/routes/: __init__.py  auth_routes.py  example_routes.py  hello_world_routes.py  user_routes.py
docker/: Dockerfile  docker-compose.yaml  entrypoint.sh
