[tool.poetry]
name = "py-hexagonal-architecture"
description = ""
authors = []
version = "1.0.0"

# Change project dependencies here
[tool.poetry.dependencies]
python="^3.10"
python-dotenv="1.0.0"
fastapi="0.108.0"
uvicorn="0.25.0"

# Change project dev dependencies here
[tool.poetry.group.test.dependencies]
pylint="3.0.3"
autopep8="2.0.4"
coverage="7.4.0"
Faker="22.0.0"
isort="5.13.2"
pytest="7.4.4"
pytest-cov="4.1.0"
pytest-mock="3.12.0"
black="23.12.1"
pycodestyle="2.11.1"

[project.urls]
"Homepage" = "https://github.com/mathmed/py-hexagonal-architecture"

[tool.black]
line-length = 100
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 100

[tool.autopep8]
max_line_length = 100
in-place = true
recursive = true
ignore = []
